integration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-service-ingress
  namespace: ecommerce
  annotations:
    konghq.com/strip-path: 'false'
    konghq.com/protocols: http
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /new-service
        pathType: Prefix
        backend:
          service:
            name: new-service
            port:
              number: 8001
